# flask-bloggy

./: .gitignore  README.md  pyproject.toml  requirements.txt
flask_bloggy/: blueprint.py
tests/: conftest.py  factories.py  utils.py
